# retrieva

./: Dockerfile.api  Dockerfile.dash  Dockerfile.ollama  LICENSE  Makefile  README.md  docker-compose.yml  environment.yml  pyproject.toml
api/: app.py
notebooks/: data_injection.ipynb  eda.ipynb  handler_testing.ipynb  llamaindex.ipynb  testing_api.ipynb
retrieva/: __init__.py  handler.py
retrieva/data/: __init__.py  filecrawler.py
retrieva/ollama/: Modelfile  install_ollama.sh  model_download.sh
webapp/: main.py
