# pyproject.toml

[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "retrieva"
version = "1.0.0.0"
description = "This is the repo pertaining all the logic of Retrieva, your smart documentation retrieval assistant!"
authors = [
    {name = "Pedro Dias", email = "pedrofilipe.md@gmail.com"},
]
requires-python = ">=3.10"

dependencies = [
    "pandas==2.2.2",
    "numpy==1.26.4",
    "matplotlib==3.6.3",
    "llama-index==0.10.30",
    "fastapi==0.110.2",
    "uvicorn==0.29.0",
    "python-dotenv==0.21.0",
    "dash==2.16.1",
    "dash-bootstrap-components==1.6.0",
    "weaviate-client==3.26.2",
    "llama-index-vector-stores-weaviate==0.1.4",
    "diskcache==5.6.3",
    "multiprocess==0.70.16",
    "dash[diskcache]",
    "huggingface-hub==0.20.3",
    "llama_index_embeddings_langchain==0.1.2",
    "langchain==0.1.16"
]

[project.optional-dependencies]
dev = [
    "jupytext==1.16.1",
    "jupyterlab-lsp==5.1.0",
    "jupyter-lsp==2.2.4",
    "jupyterlab==4.1.5",
    "jupyterlab-execute-time==3.1.2"
]

[tool.setuptools.packages.find]
exclude = ["dlpackages"]
